--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <title></title>
 
-        <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+        <!--<link href="lib/ionic/css/ionic.css" rel="stylesheet">-->
+        <link href="css/materialize.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 
         <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -13,6 +14,9 @@
         -->
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
+        <script src="js/jquery-1.11.3.min.js"></script>
+        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>-->
+        <script src="js/materialize.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="ng-cordova.min.js"></script>
@@ -109,135 +113,135 @@
 
     <script type="text/ng-template" id="templates/ingresos.html">
 
-       <ion-view title="Ingresos" ng-controller="IngresosController">
+        <ion-view title="Ingresos" ng-controller="IngresosController">
 
-       <ion-content padding="true">
+        <ion-content padding="true">
 
-       <div class="seccionInicial">
+        <div class="seccionInicial">
 
-            <div class="list">
+        <div class="list">
 
-                <div class="row">
-                    <div class="col col-50">
-                    <label class="item item-input item-floating-label">
-                    <span class="input-label">Importe</span>
-                    <input type="number" placeholder="Importe" ng-model="ingreso.cantidad" ng-change="fillDescripcionIngreso(ingreso.cantidad)">
-                    </label>
-                    </div>
+        <div class="row">
+        <div class="col col-50">
+        <label class="item item-input item-floating-label">
+        <span class="input-label">Importe</span>
+        <input type="number" placeholder="Importe" ng-model="ingreso.cantidad" ng-change="fillDescripcionIngreso(ingreso.cantidad)">
+        </label>
+        </div>
 
-                    <div class="col">
-                    <label class="item item-input item-floating-label">
-                    <span class="input-label">Descripcion</span>
-                    <input type="text" placeholder="Descripcion" ng-model="ingreso.nombre">
-                    </label>
-                    </div>
+        <div class="col">
+        <label class="item item-input item-floating-label">
+        <span class="input-label">Descripcion</span>
+        <input type="text" placeholder="Descripcion" ng-model="ingreso.nombre">
+        </label>
+        </div>
 
-                </div>
+        </div>
 
-                <ion-radio ng-repeat="item in opcionesIngreso"
-                ng-value="item.value"
-                ng-checked="item.selected"
-                ng-model="ingreso.opcion"
-                        ng-click="checkOpcionIngreso()">
-                {{ item.text }}
-                </ion-radio>
+        <ion-radio ng-repeat="item in opcionesIngreso"
+        ng-value="item.value"
+        ng-checked="item.selected"
+        ng-model="ingreso.opcion"
+        ng-click="checkOpcionIngreso()">
+        {{ item.text }}
+        </ion-radio>
 
-                <div class="row">
-                    <button class="button button-block button-positive" ng-click="crearIngreso(ingreso);" ng-show="ingreso.nombre && ingreso.cantidad && ingreso.opcion === 'cir'">
-                    Guardar ingreso
-                    </button>
-                </div>
+        <div class="row">
+        <button class="button button-block button-positive" ng-click="crearIngreso(ingreso);" ng-show="ingreso.nombre && ingreso.cantidad && ingreso.opcion === 'cir'">
+        Guardar ingreso
+        </button>
+        </div>
 
-            </div>
+        </div>
         </div>
 
         <div class="seccionSecundaria">
-            <button class="button button-block button-positive" ng-click="guardarCambiosProductos()">
-            Guardar cambios
-            </button>
+        <button class="button button-block button-positive" ng-click="guardarCambiosProductos()">
+        Guardar cambios
+        </button>
 
-            <div class="row">
+        <div class="row">
 
-                <div class="col col-50">
-                    <label class="item item-input item-select">
-                    <div class="input-label">
-                    Tipo de ingreso
-                    </div>
-                    <select ng-model="ingreso.granuloTipoIngreso" ng-options="tipoIngreso.descripcion for tipoIngreso in lstTiposIngreso">
-                    </select>
-                    </label>
-                </div>
+        <div class="col col-50">
+        <label class="item item-input item-select">
+        <div class="input-label">
+        Tipo de ingreso
+        </div>
+        <select ng-model="ingreso.granuloTipoIngreso" ng-options="tipoIngreso.descripcion for tipoIngreso in lstTiposIngreso">
+        </select>
+        </label>
+        </div>
 
-                <div class="col">
-                    <label class="item item-input item-floating-label">
-                    <span class="input-label">Cantidad de tiempo</span>
-                    <input type="number" placeholder="Tiempo" ng-model="ingreso.tiempoTipoIngreso">
-                    </label>
-                </div>
+        <div class="col">
+        <label class="item item-input item-floating-label">
+        <span class="input-label">Cantidad de tiempo</span>
+        <input type="number" placeholder="Tiempo" ng-model="ingreso.tiempoTipoIngreso">
+        </label>
+        </div>
 
-                <button class="button button-positive seccionIngreso" ng-click="doRepartoAutomatico()" ng-show="ingreso.granuloTipoIngreso">
-                Reparto automático
-                </button>
+        <button class="button button-positive seccionIngreso" ng-click="doRepartoAutomatico()" ng-show="ingreso.granuloTipoIngreso">
+        Reparto automático
+        </button>
 
-            </div>
+        </div>
 
-            <h3>Productos</h3>
-            <ion-list>
-                <ion-item ng-repeat="producto in lstProductos | orderBy : '-prioridad.importancia'" ng-show="producto.nombre !== 'Reserva'">
-                {{getNombreProducto(producto)}}
-                <div class="input-label">
-                Acumulado
-                </div>
-                <input type="number" ng-model="producto.acumulacion" ng-disabled="true">
-                <div class="input-label">
-                +
-                </div>
-                <input type="number" ng-model="producto.nuevoIngreso" ng-change="actualizarDatosIngresos()">
-                <div class="input-label">
-                =
-                </div>
-                <input type="number" ng-model="producto.sumaAcumulacion" ng-disabled="true">
-                </ion-item>
-            </ion-list>
+        <h3>Productos</h3>
+        <ion-list>
+        <ion-item ng-repeat="producto in lstProductos | orderBy : '-prioridad.importancia'" ng-show="producto.nombre !== 'Reserva'">
+        {{getNombreProducto(producto)}}
+        <div class="input-label">
+        Acumulado
+        </div>
+        <input type="number" ng-model="producto.acumulacion" ng-disabled="true">
+        <div class="input-label">
+        +
+        </div>
+        <input type="number" ng-model="producto.nuevoIngreso" ng-change="actualizarDatosIngresos()">
+        <div class="input-label">
+        =
+        </div>
+        <input type="number" ng-model="producto.sumaAcumulacion" ng-disabled="true">
+        </ion-item>
+        </ion-list>
 
-            <button class="button button-block button-positive" ng-click="cancelarReparto();">
-            Cancelar
-            </button>
+        <button class="button button-block button-positive" ng-click="cancelarReparto();">
+        Cancelar
+        </button>
         </div>
 
         </ion-content>
 
         <div class="productoReservaSecundario">
-            <div class="seccionReserva">
-            <ion-list>
-                <ion-item>
-                    {{getNombreProducto(lstProductos[lstProductos.length - 1])}}
-                    <div class="input-label">
-                        Acumulado
-                    </div>
-                    <input type="number" ng-model="lstProductos[lstProductos.length - 1].acumulacion" ng-disabled="true">
-                    <div class="input-label">
-                    +
-                    </div>
-                    <input type="number" ng-model="lstProductos[lstProductos.length - 1].nuevoIngreso" ng-disabled="true">
-                    <div class="input-label">
-                    -->
-                    </div>
-                    <input type="number" ng-model="lstProductos[lstProductos.length - 1].sumaAcumulacion" ng-disabled="true">
-                </ion-item>
-            </ion-list>
-            </div>
+        <div class="seccionReserva">
+        <ion-list>
+        <ion-item>
+        {{getNombreProducto(lstProductos[lstProductos.length - 1])}}
+        <div class="input-label">
+        Acumulado
+        </div>
+        <input type="number" ng-model="lstProductos[lstProductos.length - 1].acumulacion" ng-disabled="true">
+        <div class="input-label">
+        +
+        </div>
+        <input type="number" ng-model="lstProductos[lstProductos.length - 1].nuevoIngreso" ng-disabled="true">
+        <div class="input-label">
+        -->
+        </div>
+        <input type="number" ng-model="lstProductos[lstProductos.length - 1].sumaAcumulacion" ng-disabled="true">
+        </ion-item>
+        </ion-list>
+        </div>
 
-            <div class="seccionIngreso">
-             <ion-list>
-                <ion-item>
-                    Ingreso
-                    <div class="cantidadIngreso">
-                        {{ingreso.cantidad}}
-                    </div>
-                </ion-item>
-            </ion-list>
-            </div>
+        <div class="seccionIngreso">
+        <ion-list>
+        <ion-item>
+        Ingreso
+        <div class="cantidadIngreso">
+        {{ingreso.cantidad}}
+        </div>
+        </ion-item>
+        </ion-list>
+        </div>
 
         </div>
 
