--- a/index.html
+++ b/index.html
@@ -5,24 +5,19 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <title></title>
 
-        <!--<link href="lib/ionic/css/ionic.css" rel="stylesheet">-->
-        <link href="css/materialize.min.css" rel="stylesheet">
+        <link href="lib/ionic/css/ionic.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 
-        <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
         <link href="css/ionic.app.css" rel="stylesheet">
-        -->
+
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
-        <script src="js/jquery-1.11.3.min.js"></script>
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>-->
-        <script src="js/materialize.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="ng-cordova.min.js"></script>
         <script src="cordova.js"></script>
 
-        <script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
         <script src="js/transitionPlugin.js"></script>
 
         <!-- your app's js -->
@@ -50,7 +45,7 @@
     <script type="text/ng-template" id="templates/sign-in.html">
         <ion-view title="Login">
         <ion-content padding="true">
-        <h2>¡Bienvenido a FinansApp!</h2>
+        <h2>¡Bienvenido a Finappcial!</h2>
         <div class="list">
         <label class="item item-input item-floating-label">
         <span class="input-label">Usuario</span>
@@ -61,11 +56,15 @@
         <input type="text" placeholder="Clave" ng-model="login.clave">
         </label>
         </div>
+
         <button class="button button-block button-positive" ng-click="crearUsuario(login.usuario, login.clave);">
         Acceder
         </button>
         </ion-content>
         </ion-view>
+
+
+
     </script>
 
     <script id="templates/tabs.html" type="text/ng-template">
